--- a/configs/config.car.yaml
+++ b/configs/config.car.yaml
@@ -211,15 +211,13 @@ ALDL160:
       0x18:
         name: EGR Duty Cycle (DC)
 
-ADS1115:
-  - name: adc # ADC from adafruit with reference 3.3v
+INA219:
+  - name: consumption
     i2c_bus: 1 # i2c device number
-    address: 0x48 # Bus device address
-    update_timeout: 30 # 30 sec
+    address: 0x40 # Bus device address
+    update_timeout: 5 # sec
     map:
-      - name: Battery Voltage # ADC0 input
-        gain: 1
-        math: (N-4877)*0.002468 # Converted table to simple linear dependency
+      - name: Battery Voltage (V)
         round: 2 # second sign after the point
         signals:
           # Low Battery
@@ -246,21 +244,31 @@ ADS1115:
             parameters:
               value: false
 
-#          It's possible to use this signals, but better to use onboard power control
-#          # Power Outage
-#          - module: Power
-#            socket: powerOutage
-#            when: N<6.0
-#            parameters:
-#              value: true
-#          - module: Power
-#            socket: powerOutage
-#            when: N>6.0
-#            parameters:
-#              value: false
-      - enabled: false # Other sensors is not used
+          # It's possible to use this signals, but better to use onboard power control
+          # Power Outage
+          #- module: Power
+          #  socket: powerOutage
+          #  when: N<6.0
+          #  parameters:
+          #    value: true
+          #- module: Power
+          #  socket: powerOutage
+          #  when: N>6.0
+          #  parameters:
+          #    value: false
+
+      - name: Current (A)
+        round: 3
+
+      - name: Power (W)
+        round: 2
+
       - enabled: false
-      - enabled: false
+
+    signals:
+      changes:
+        module: Client
+        socket: logData
 
 Power:
   - name: power
