--- a/configs/config.car.yaml
+++ b/configs/config.car.yaml
@@ -215,7 +215,7 @@ INA219:
   - name: consumption
     i2c_bus: 1 # i2c device number
     address: 0x40 # Bus device address
-    update_timeout: 5 # sec
+    update_delay: 5 # sec
     map:
       - name: Battery Voltage (V)
         round: 2 # second sign after the point
