A number of bugfixes & improvements
Fix:
 * Big bug in the Module sockets logic - now it will not return on failure until all the sockets will be processed
 * Bluealsa service restart if on error
 * Bluealsa right local path to binary after the build

Improvements:
 * Faster restart of the tracker service - now data modules sleeps right

Bluetooth:
 * Moving bluetooth to brmngr interface & implemented fast connect option
 * Rewritten start bluealsa proxy and watching for the exits with auto restart

--- a/configs/bluealsa.service
+++ b/configs/bluealsa.service
@@ -6,7 +6,10 @@ After=bluetooth.service
 [Service]
 Type=simple
 User=root
-ExecStart=/usr/bin/bluealsa -p a2dp-sink
+ExecStart=/usr/local/bin/bluealsa -p a2dp-sink
+Restart=always
+RestartSec=5
+TimeoutStopSec=15
 
 [Install]
 WantedBy=default.target
