--- a/configs/tracker.service
+++ b/configs/tracker.service
@@ -6,6 +6,7 @@ After=bluetooth.service systemd-udev-trigger.service network.target
 [Service]
 Type=simple
 Restart=always
+RestartSec=1
 TimeoutStopSec=15
 
 KillSignal=SIGINT
